<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPendudukActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarThemeOrange"/>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_black"
                android:text="Tambahkan Data Diri"
                android:id="@+id/judulHeader"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/keterangan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="5dp"
                android:text="Masukkan data diri anda pada form yang telah di sediakan di bawah ini. Pastikan data diri anda benar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_profile"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_baseline_person_24"
                    app:civ_border_color="@color/black"
                    app:civ_border_overlay="true"
                    app:civ_border_width="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingVertical="5dp"
                    android:text="@string/label_name"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/nama_lengkap"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="Masukkan Nama"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textSize="14dp"
                    android:digits=".,'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingVertical="5dp"
                    android:text="@string/label_alamat"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/alamat"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="Masukkan Alamat"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/birthdayT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingVertical="5dp"
                    android:text="@string/label_tglLahir"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/birthday"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="Masukkan Tanggal Lahir"
                    android:inputType="date"
                    android:padding="15dp"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingVertical="5dp"
                    android:text="@string/label_jk"
                    android:textSize="16dp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/jenisKelamin"
                    android:background="@drawable/spinner_background"
                    android:entries="@array/jenis_kelamin"
                    android:padding="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingVertical="5dp"
                    android:text="@string/label_noTelp"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/telepon"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="Masukan Nomor Telepon"
                    android:inputType="number"
                    android:padding="15dp"
                    android:textSize="14dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingVertical="5dp"
                    android:text="Gaji Perbulan (Estimasi)"
                    android:textSize="16dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/labelSeek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Rp. 0"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/labelSeek2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Rp. 100.000.000"
                        android:textSize="10dp" />

                    <SeekBar
                        android:id="@+id/seekBar"
                        style="@style/Widget.AppCompat.SeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/labelSeek"
                        android:max="100000000"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/seekBar"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Rp0"
                        android:textAlignment="center"
                        android:textSize="10dp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/labelAgama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingVertical="5dp"
                    android:text="@string/label_agama"
                    android:textSize="16dp" />

                <RadioGroup
                    android:id="@+id/agama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/view_below"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Hindu"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Islam"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/radio3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Kristen"
                        android:textSize="12sp"/>

                    <RadioButton
                        android:id="@+id/radio4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Budha"
                        android:textSize="12sp"/>
                </RadioGroup>

                <TextView
                    android:id="@+id/labelHobi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingVertical="5dp"
                    android:text="Hobi"
                    android:textSize="16dp" />

                <LinearLayout
                    android:id="@+id/checkboxGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/berenang"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:text="Berenang"
                        android:textSize="12sp"/>

                    <CheckBox
                        android:id="@+id/tiduran"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:text="Tiduran"
                        android:textSize="12sp"/>

                    <CheckBox
                        android:id="@+id/rebahan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:text="Rebahan"
                        android:textSize="12sp"/>

                    <CheckBox
                        android:id="@+id/gaming"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:text="Gaming"
                        android:textSize="12sp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_baseline_done_24"
        android:layout_marginVertical="35dp"
        android:layout_marginHorizontal="15dp"
        app:fabSize="normal"
        app:borderWidth="0dp"
        app:elevation="6dp"
        android:backgroundTint="#FFC107"
        android:id="@+id/btnSubmit"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
